--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,32 +2,27 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+.bg-custom-pink {
+    background-color: #eeb1b9;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
+.text-color {
+    color: #3d3b56;
+}
+
+@font-face {
+    font-family: 'Badger';
+    src: url('/fonts/Badger.otf') format('opentype');
+    font-weight: normal;
+    font-style: normal;
   }
-}
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
-}
+  @import url('https://fonts.googleapis.com/css2?family=Niconne&display=swap');
 
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
+  body {
+    font-family: 'Niconne', cursive;
   }
-}
+
+  .font-Badger {
+    font-family: 'Badger', sans-serif;
+  }
